// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManyToOne Decorator should add metadata 1`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "OneToManyFirstDecoratorEntity",
    "namespace": null,
    "target": [Function],
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "foreignConstructor": [Function],
      "foreignKey": "first",
      "key": "second",
      "options": {
        "joinKey": null,
        "joinTable": null,
        "loading": null,
        "nullable": false,
        "onDelete": null,
        "onOrphan": null,
        "onUpdate": null,
        "strategy": null,
      },
      "type": "OneToMany",
    },
  ],
  "schemas": [],
}
`;

exports[`ManyToOne Decorator should add metadata 2`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "ManyToOneSecondDecoratorEntity",
    "namespace": null,
    "target": [Function],
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "foreignConstructor": [Function],
      "foreignKey": "second",
      "key": "first",
      "options": {
        "joinKey": true,
        "joinTable": null,
        "loading": null,
        "nullable": false,
        "onDelete": null,
        "onOrphan": null,
        "onUpdate": null,
        "strategy": null,
      },
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
}
`;
